# repo-intelligence

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  state.py
.zencoder/rules/: repo.md
agents/: architecture_analyzer.py  business_context.py  entity_extractor.py  gap_analyzer.py  repo_scanner.py  report_generator.py  workflow_analyzer.py
analysis/: best_practices.py
api/: main.py
config/: settings.py
graph/: workflow.py
sample_applications/shop_app/: Main.py
tools/: dependency_mapper.py  repo_reader.py  semantic_search.py
